# call-rating

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  rates.tsv  rates1.tsv
cmake-modules/: CodeCoverage.cmake
gtest-1.7.0/make/: Makefile
src/: CMakeLists.txt  Makefile  csvparser.cpp  csvparser.h  http-client.rb  http.cpp  main.cpp  matcher.cpp  matcher.h  tests.cpp
